--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@ a {
 
 ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .page {
@@ -17,10 +19,25 @@ ul {
     font-family: Roboto, sans-serif;
     letter-spacing: 0.02em;
 }
-/*----------------------------HEADER----------------------------
+/*----------------------------HEADER----------------------------*/
+.header-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 /*LOGO*/
 .logoblue {
     color: #2196F3;
+}
+.container {
+    outline: 2px solid tomato;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    
 }
 
 .logo {
@@ -38,11 +55,22 @@ ul {
 
 /*SITE NAV*/
 .site-nav {
+    display: flex;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
 }
-
+.nav-item:last-child {
+    margin-right: 0;
+}
+.site-nav a {
+    display: block;
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
+.nav-item {
+    margin-right: 50px;
+}
 .site-nav a {
     color: var(--primary-text-color);
 }
@@ -62,8 +90,16 @@ ul {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
+    margin: 0;
+    padding: 0;
+    display: flex;
 }
-
+.auth-nav .item {
+    margin-right: 50px;
+}
+.auth-nav .item:last-child {
+margin-right: 0;
+}
 .auth-nav a {
     color: var(--secondary-text-color);
     ;
@@ -81,47 +117,103 @@ ul {
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    margin-bottom: 10px;
+    margin-top: 0;
 }
 
 /*---------------------------- HERO---------------------------- */
 .hero {
-    background: #2F303A;
+    background-color: #2F303A;
     color: #ffffff;
+    padding: 200px 452px;
+   
+    
+}
+.center {
+    text-align: center;
 }
 .hero-title {
+    margin: 0 auto 30px auto; 
     font-style: normal;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
+     margin-bottom: 30px;
+     width: 696px;
+     text-align: center;
 }
 /*----------------------------ADVANTAGES----------------------------*/
-.advantages-list p {
+.advantages {
+    padding-bottom: 94px;
+    padding-top: 94px;
+}
+
+.section-title {
+    margin: 0;
+}
+ .advantages-list {
+     margin: 0;
+     padding: 0;
+     }
+.adv-item {
     color: var(--secondary-text-color);
     font-size: 14px;
     line-height: 1.71;
+  
 }
+   .features {
+       width: 270px;
+       height: 101px;
+   }
 /*----------------------------ABOUT US---------------------------- */
-.aboutus-title {
+.section3 .aboutus-title, .ourteam-title{
     color: var(--primary-text-color);
     font-weight: bold;
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
+    margin: 0;
+    padding: 0;
+    background-color: tomato;
+    margin-bottom: 50px;
+      }
+.section3 {
+    padding-bottom: 94px;
 }
+
 /*----------------------------OUR TEAM---------------------------- */
 .ourteam {
+    padding: 94px 215px;
     background: #F5F4FA;
 }
-.ourteam h3 {
-    text-align: center;
+
+.ourteam .ourteam-item {
+    margin: 0;
+    padding: 0;
 }
-.ourteam p {
+.cards {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    width: 270px;
+    height: 368px;
+}
+.ourteam .section-title {
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 10px;
+
+}
+.ourteam-who {
     color: var(--secondary-text-color);
     font-size: 16px;
     line-height: 1.18;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 30px;
 }
 /*----------------------------FOOTER---------------------------- */
 .logo-footer {
@@ -130,9 +222,12 @@ ul {
     font-weight: bold;
     font-size: 26px;
     line-height: 1.19;
+    margin-bottom: 30px;
+    display: inline-block;
 }
 .footer {
     background-color: #2F303A;
+    padding: 60px 0;
     
 }
 .footer-nav a {
@@ -147,8 +242,9 @@ ul {
     color: #FFFFFF;
     font-style: normal;
 }
-.logo-footer {
-    color: #ffffff;
+.footer-address {
+    margin: 9px 0;
+    display: inline-block;
 }
 .logo-footer:hover {
     color: var(--navigation-but-color);
@@ -158,19 +254,28 @@ button {
     font-family: inherit;
 }
 .button {
-
-    font-weight: bold;
+     font-weight: bold;
     font-size: 16px;
-    line-height: 1.87;
-    display: flex;
-    align-items: center;
+    line-height: 1.87; 
     text-align: center;
+    border: 0;
     letter-spacing: 0.06em;
     color: #FFFFFF;
-    background: #2196F3;
-}
+    background-color: #2196F3;
+    border-radius: 4px;
+    padding: 10px 32px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    min-width: 200px;
+    height: 50px;
+       }
 /*----------------------------PORTFOLIO.HTML----------------------------*/
 /*----------------------------MAIN----------------------------*/
+.main-cont {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  padding-left: 215px;
+  padding-right: 215px;  
+}
 .portfolio p {
     color: var(--secondary-text-color)
 }
@@ -180,7 +285,10 @@ button {
     line-height: 1.62;
     text-align: center;
     background-color: #F5F4FA;
-    color: var(--primary-text-color)
+    color: var(--primary-text-color);
+    border-radius: 4px;
+    border: 0;
+
 }
 .button-portfolio:focus,
 .button-portfolio:hover {
@@ -195,4 +303,8 @@ button {
 .portfolio p {
     font-size: 16px;
     line-height: 1.87;
+    margin-top: 4px;
+}
+.portfolio-title {
+margin-top: 20px;
 }
