--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,12 @@ ul {
     letter-spacing: 0.02em;
 }
 /*----------------------------HEADER----------------------------*/
-.header-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
 
+.header-nav {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
 /*LOGO*/
 .logoblue {
     color: #2196F3;
@@ -59,6 +59,7 @@ ul {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
+    margin-left: 93px;
 }
 .nav-item:last-child {
     margin-right: 0;
@@ -93,6 +94,7 @@ ul {
     margin: 0;
     padding: 0;
     display: flex;
+    margin-left: auto;
 }
 .auth-nav .item {
     margin-right: 50px;
@@ -125,7 +127,8 @@ margin-right: 0;
 .hero {
     background-color: #2F303A;
     color: #ffffff;
-    padding: 200px 452px;
+    padding-top: 200px;
+    padding-bottom: 200px;
    
     
 }
@@ -148,26 +151,29 @@ margin-right: 0;
     padding-bottom: 94px;
     padding-top: 94px;
 }
-
 .section-title {
     margin: 0;
 }
  .advantages-list {
      margin: 0;
      padding: 0;
+     display: flex;
      }
 .adv-item {
     color: var(--secondary-text-color);
     font-size: 14px;
     line-height: 1.71;
-  
 }
    .features {
        width: 270px;
        height: 101px;
+       margin-right: 30px;
+   }
+   .features:last-child {
+       margin-right: 0;
    }
 /*----------------------------ABOUT US---------------------------- */
-.section3 .aboutus-title, .ourteam-title{
+.aboutus .aboutus-title, .ourteam-title{
     color: var(--primary-text-color);
     font-weight: bold;
     font-size: 36px;
@@ -175,11 +181,19 @@ margin-right: 0;
     text-align: center;
     margin: 0;
     padding: 0;
-    background-color: tomato;
     margin-bottom: 50px;
       }
-.section3 {
+.aboutus {
     padding-bottom: 94px;
+}
+.aboutus-items {
+    display: flex;
+}
+.aboutus-item {
+    margin-right: 30px;
+}
+.aboutus-item:last-child {
+    margin-right: 0;
 }
 
 /*----------------------------OUR TEAM---------------------------- */
@@ -191,6 +205,7 @@ margin-right: 0;
 .ourteam .ourteam-item {
     margin: 0;
     padding: 0;
+    display: flex;
 }
 .cards {
     background: #FFFFFF;
@@ -200,6 +215,10 @@ margin-right: 0;
     border-radius: 0px 0px 4px 4px;
     width: 270px;
     height: 368px;
+    margin-right: 30px;
+}
+.cards:last-child {
+    margin-right: 0;
 }
 .ourteam .section-title {
     text-align: center;
