--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ ul {
     color: #2196F3;
 }
 .container {
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
@@ -293,7 +293,7 @@ button {
   padding-top: 94px;
   padding-bottom: 94px;
   padding-left: 215px;
-  padding-right: 215px;  
+  padding-right: 215px; 
 }
 .portfolio p {
     color: var(--secondary-text-color)
@@ -307,23 +307,57 @@ button {
     color: var(--primary-text-color);
     border-radius: 4px;
     border: 0;
-
+    display: flex;
+    margin-right: 8px;
+    padding: 6px 22px 6px 22px;
+    
 }
 .button-portfolio:focus,
 .button-portfolio:hover {
     color: #ffffff;
     background-color: var(--navigation-but-color)
 }
-.portfolio h1 {
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 2;
-}
-.portfolio p {
-    font-size: 16px;
-    line-height: 1.87;
-    margin-top: 4px;
-}
 .portfolio-title {
 margin-top: 20px;
+}
+.buttons-portfolio {
+    display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 50px;
+}
+.portfolio {
+    display: flex;
+    flex-wrap: wrap;
+
+
+}
+.portfolio-title {
+font-weight: bold;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+color: var(--primary-text-color);
+margin-top: 20px;
+margin-bottom: 4px;
+margin-left: 24px;
+margin-right: 24px;
+}
+.portfolio-whatis {
+    margin: 0 24px 20px 24px;
+        font-size: 16px;
+        line-height: 1.87;
+        margin-top: 4px;
+}
+.flext-item {
+    background: #FFFFFF;
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
+    margin-right: 30px;
+    width: 370px;
+    margin-bottom: 30px;
+    
+}
+.flext-item:nth-child(3n) {
+    margin-right: 0;
 }
