--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,12 @@
     --navigation-but-color: #2196F3;
     --secondary-text-color: #757575;
 }
-
+h1, h2, h3 {
+    margin: 0;
+}
+p {
+    margin: 0;
+}
 a {
     text-decoration: none;
 }
