--- a/css/styles.css
+++ b/css/styles.css
@@ -26,14 +26,41 @@ ul {
        
 }
 /*----------------------------HEADER----------------------------*/
+
+.header-nav:hover,
+.header-nav:focus {
+    color: red;
+}
+
+
+.prov {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.icon-email:hover {
+    fill: red;
+}
+.icon-tel:hover {
+    fill: red;
+}
+.icon-email {
+    height: 12px;
+    width: 16px;
+}
+.icon-tel {
+    height: 16px;
+    width: 10px;
+}
+
+.portfol
 .portfolio-header {
       border-bottom: 1px solid #ECECEC;
 }
 .header-nav {
     display:flex;
     align-items: center;
-    justify-content: space-between;
-  
+    justify-content: space-between; 
 }
 
 /*LOGO*/
@@ -41,7 +68,6 @@ ul {
     color: #2196F3;
 }
 .container {
-    /* outline: 2px solid tomato; */
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
@@ -105,6 +131,8 @@ ul {
     padding: 0;
     display: flex;
     margin-left: auto;
+    text-align: center;
+    align-items: baseline;
 }
 .auth-nav .item {
     margin-right: 50px;
@@ -135,12 +163,24 @@ margin-right: 0;
 
 /*---------------------------- HERO---------------------------- */
 .hero {
-    background-color: #2F303A;
-    color: #ffffff;
+    height: 600px;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(
+        to right, 
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+    url(../images/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+    
+    color: white;
     padding-top: 200px;
     padding-bottom: 200px;
-   
-    
+
 }
 .center {
     text-align: center;
@@ -158,16 +198,22 @@ margin-right: 0;
 }
 /*----------------------------ADVANTAGES----------------------------*/
 .advantages {
-    padding-bottom: 94px;
     padding-top: 94px;
+    padding-bottom: 94px;
 }
 .section-title {
     margin: 0;
+}
+.adv-title {
+ margin-bottom: 10px;
+ margin-top: 30px;
+
 }
  .advantages-list {
      margin: 0;
      padding: 0;
      display: flex;
+     
      }
 .adv-item {
     color: var(--secondary-text-color);
@@ -176,12 +222,35 @@ margin-right: 0;
 }
    .features {
        width: 270px;
-       height: 101px;
        margin-right: 30px;
    }
    .features:last-child {
        margin-right: 0;
    }
+
+.features::before {
+    display: block;
+    content: "";
+    height: 120px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color:#F5F4FA;
+    border-radius: 4px;
+}
+.icon-antenna::before {
+    background-image: url(../images/antenna.svg);
+}
+.icon-clock::before {
+    background-image: url(../images/clock.svg);
+}
+.icon-diagram::before {
+    background-image: url(../images/diagram.svg);
+}
+.icon-astronaut::before {
+    background-image: url(../images/astronaut.svg);
+}
+
+
 /*----------------------------ABOUT US---------------------------- */
 .aboutus .aboutus-title, .ourteam-title{
     color: var(--primary-text-color);
@@ -205,6 +274,7 @@ margin-right: 0;
 .aboutus-item:last-child {
     margin-right: 0;
 }
+
 
 /*----------------------------OUR TEAM---------------------------- */
 .ourteam {
